forgot to press save

--- a/MusicGen/blank_transformer_single_pass.ipynb
+++ b/MusicGen/blank_transformer_single_pass.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspace/venv_work/lib/python3.8/site-packages/torch/nn/utils/weight_norm.py:30: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
-      "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To hold the code of a blank transformer model\n",
     "import sys\n",
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,12 +125,12 @@
     }
    ],
    "source": [
-    "big_model = SimpleModel(d_model, nhead, num_layers, dim_feedforward)"
+    "big_model = SimpleModel(comp_model, d_model, nhead, num_layers, dim_feedforward)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,47 +226,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 289., 1706.,  289.,  ..., 1082.,  905., 1044.],\n",
-      "         [ 289., 1706.,  289.,  ..., 1082.,  905., 1044.],\n",
-      "         [ 449., 1085.,  449.,  ..., 1177., 1037., 1322.],\n",
+      "tensor([[[   8.,   83., 1318.,  ...,   83., 1711., 1027.],\n",
+      "         [   8.,   83., 1318.,  ...,   83., 1711., 1027.],\n",
+      "         [1935., 1434., 1534.,  ..., 1005., 1758.,  915.],\n",
       "         ...,\n",
-      "         [1747., 1509.,  363.,  ...,  604.,  993.,  690.],\n",
-      "         [1848., 1848., 1185.,  ...,  569., 2026.,  786.],\n",
-      "         [1848., 1848., 1185.,  ...,  569., 2026.,  786.]]])\n",
+      "         [1903., 2008., 1793.,  ...,  953., 1466.,  934.],\n",
+      "         [1951., 1848., 1850.,  ..., 1951.,  685.,  584.],\n",
+      "         [1951., 1848., 1850.,  ..., 1951.,  685.,  584.]]])\n",
       "torch.Size([1, 8, 512])\n",
       "torch.Size([1, 8, 512])\n",
-      "tensor([[[  0.0000,   0.0000, 449.8561,  ..., 140.1727, 150.7595, 551.3794],\n",
-      "         [  0.0000,   0.0000, 449.8561,  ..., 140.1727, 150.7595, 551.3794],\n",
-      "         [  0.0000,   0.0000,   0.0000,  ...,   0.0000,   0.0000, 425.9550],\n",
+      "tensor([[[   0.0000,    0.0000,    0.0000,  ...,  851.0757,    0.0000,\n",
+      "          1116.9290],\n",
+      "         [   0.0000,    0.0000,    0.0000,  ...,  851.0757,    0.0000,\n",
+      "          1116.9290],\n",
+      "         [   0.0000,    0.0000,    0.0000,  ..., 1450.5760,  331.6046,\n",
+      "          1140.8766],\n",
       "         ...,\n",
-      "         [  0.0000,   0.0000, 536.1402,  ...,   0.0000,   0.0000, 777.7769],\n",
-      "         [  0.0000,   0.0000,   0.0000,  ...,   0.0000,   0.0000, 613.6776],\n",
-      "         [  0.0000,   0.0000,   0.0000,  ...,   0.0000,   0.0000, 613.6779]]],\n",
-      "       grad_fn=<ReluBackward0>)\n",
+      "         [   0.0000,    0.0000,    0.0000,  ..., 1412.4242,  163.9487,\n",
+      "          1040.1035],\n",
+      "         [   0.0000,    0.0000,    0.0000,  ..., 1108.1486,  280.1317,\n",
+      "          1065.1174],\n",
+      "         [   0.0000,    0.0000,    0.0000,  ..., 1108.1486,  280.1320,\n",
+      "          1065.1176]]], grad_fn=<ReluBackward0>)\n",
       "torch.Size([1, 8, 512])\n",
-      "tensor([[[0.0000, 0.0000, 0.6107,  ..., 0.0000, 0.2548, 0.0000],\n",
-      "         [0.3571, 0.0000, 0.5867,  ..., 0.0000, 1.1249, 0.0000],\n",
-      "         [0.7010, 0.0000, 0.0000,  ..., 0.0000, 2.0907, 0.0000],\n",
+      "tensor([[[1.2123, 0.0000, 1.7921,  ..., 0.3492, 0.0000, 0.0000],\n",
+      "         [2.0954, 1.2539, 1.8463,  ..., 0.7313, 0.0000, 0.0000],\n",
+      "         [0.2962, 0.5955, 1.3289,  ..., 0.5851, 1.7048, 0.0000],\n",
       "         ...,\n",
-      "         [0.4270, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.4595],\n",
-      "         [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.4536, 0.0388],\n",
-      "         [0.0759, 0.0000, 0.0000,  ..., 0.2590, 1.8438, 0.0000]]],\n",
+      "         [0.8593, 0.0000, 0.4917,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "         [0.7198, 0.0000, 0.0874,  ..., 1.8356, 0.0000, 0.2411],\n",
+      "         [1.7156, 0.5371, 1.7001,  ..., 0.7524, 0.0000, 0.0000]]],\n",
       "       grad_fn=<ReluBackward0>)\n",
       "torch.Size([1, 8, 1500])\n",
-      "tensor([[[0.0000, 0.0125, 0.1503,  ..., 0.5045, 1.2405, 0.0000],\n",
-      "         [0.0000, 0.4997, 0.0000,  ..., 0.6158, 0.2675, 0.0000],\n",
-      "         [0.3835, 0.4361, 0.0000,  ..., 0.7096, 0.3922, 0.0000],\n",
+      "tensor([[[0.0000, 0.2460, 0.4217,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "         [0.0000, 0.1841, 0.1112,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "         [0.0000, 0.0000, 0.2298,  ..., 0.0000, 0.0000, 0.3043],\n",
       "         ...,\n",
-      "         [0.7278, 0.5053, 0.0000,  ..., 0.8922, 0.6495, 0.0000],\n",
-      "         [0.4282, 0.0000, 0.0000,  ..., 0.6083, 0.0000, 0.0000],\n",
-      "         [0.2805, 0.2882, 0.0000,  ..., 0.3818, 0.3017, 0.0000]]],\n",
+      "         [0.0000, 0.1539, 0.4630,  ..., 0.0000, 0.0000, 0.0203],\n",
+      "         [0.0000, 0.0180, 0.2231,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "         [0.0000, 0.4424, 0.0640,  ..., 0.0000, 0.0000, 0.1713]]],\n",
       "       grad_fn=<ReluBackward0>)\n"
      ]
     }
@@ -287,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -488,19 +484,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43my\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.Size([1])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -509,45 +504,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2047)"
+       "torch.Size([1, 8, 1500])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "target_codes.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "shape '[0]' is invalid for input of size 12000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtarget_codes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mview\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shape '[0]' is invalid for input of size 12000"
+     ]
+    }
+   ],
+   "source": [
+    "target_codes.view(-1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 166,  166, 1507,  ..., 1472, 1188,  263],\n",
-       "         [ 166,  166, 1507,  ..., 1472, 1188,  263],\n",
-       "         [1534, 1534, 1782,  ..., 1495, 1632, 1293],\n",
-       "         ...,\n",
-       "         [2019, 1540, 2002,  ...,  551, 1540, 1522],\n",
-       "         [1951, 1854,  531,  ..., 1759, 1848, 2019],\n",
-       "         [1951, 1854,  531,  ..., 1759, 1848, 2019]]])"
+       "torch.Size([1, 1500])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "target_codes[:, 5, :].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 1500])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.view(-1, 1500).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.ones((output.size(0),)).shape"
+   ]
   },
   {
    "cell_type": "code",
