--- a/MusicGen/AudioBreakdown.ipynb
+++ b/MusicGen/AudioBreakdown.ipynb
@@ -2,40 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torchaudio'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# This file is used to breakup the 4hour 45min files into 30 second files.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 30 seconds is used by musicgen but you can change the length to whatever you want.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchaudio\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torchaudio'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This file is used to breakup the 4hour 45min files into 30 second files.\n",
     "# 30 seconds is used by musicgen but you can change the length to whatever you want.\n",
     "import os\n",
-    "import torchaudio"
+    "import torchaudio\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loads all the wav files in the old_data_path\n",
-    "# Splits them into 30 second chunks\n",
+    "# Splits them into file_length second chunks\n",
     "# Saves the chunks in the new_data_path\n",
     "# But it also downsamples if necessary\n",
     "class AudioBreakdown():\n",
-    "    def __init__(self, old_data_path, new_data_path):\n",
+    "    def __init__(self, old_data_path, new_data_path, file_lengths):\n",
+    "        # file_lengths is how long in seconds the files should be\n",
+    "        self.file_lengths = file_lengths\n",
+    "\n",
     "        # old_data_path: where the none 30 second files are stored with their .txt label files\n",
     "        self.old_path = old_data_path\n",
     "        # new_data_path: where to store the 30 second files, each with their own copy of the .txt label file\n",
@@ -75,7 +67,7 @@
     "            assert sample_rate == 32000, f\"Sample rate is {sample_rate} not 32000\"\n",
     "            print(f\"\\twaveform shape: {waveform.shape}\")\n",
     "            # calculate the number of 30 second chunks\n",
-    "            chunk_length = 30 * sample_rate\n",
+    "            chunk_length = self.file_lengths * sample_rate\n",
     "            print(f\"\\tChunk length: {chunk_length}\")\n",
     "            num_chunks = waveform.shape[1] // chunk_length\n",
     "            #num_chunks = (waveform.shape[1] + chunk_length - 1) // chunk_length\n",
@@ -106,24 +98,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recording_01.wav\n",
+      "Sample rate is 44100 not 32000\n",
+      "\twaveform shape: torch.Size([1, 547200000])\n",
+      "\tChunk length: 320000\n",
+      "\tNumber of chunks: 1710\n",
+      "90Deg_EARS_1.wav\n",
+      "Sample rate is 44100 not 32000\n",
+      "\twaveform shape: torch.Size([1, 547200000])\n",
+      "\tChunk length: 320000\n",
+      "\tNumber of chunks: 1710\n",
+      "90Deg_EARS_2.wav\n",
+      "Sample rate is 44100 not 32000\n",
+      "\twaveform shape: torch.Size([1, 547200000])\n",
+      "\tChunk length: 320000\n",
+      "\tNumber of chunks: 1710\n"
+     ]
+    }
+   ],
    "source": [
     "# origin -> where the 4 hour 45 min files are stored\n",
     "# output -> where to store the 30 second files\n",
     "origin = '/workspace/model2_data'\n",
-    "output = '/workspace/small_model_data2'\n",
-    "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output)\n",
+    "output = '/workspace/small_model_data3'\n",
+    "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output, file_lengths=10)\n",
     "myaudio.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv_work",
    "language": "python",
-   "name": "python3"
+   "name": "venv_work"
   },
   "language_info": {
    "codemirror_mode": {
@@ -135,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
