Added more models

--- a/MusicGen/blank_transformer.ipynb
+++ b/MusicGen/blank_transformer.ipynb
@@ -1903,8 +1903,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_codes_dataset.load_data('90_degree_compress_tensors_10sec.pkl')\n",
-    "audio_codes_dataset.set_audio_dataset(mydataset)"
+    "audio_codes_dataset.load_data('90_degree_compress_tensors_10sec_augmented.pkl')\n",
+    "#audio_codes_dataset.set_audio_dataset(mydataset)"
    ]
   },
   {
@@ -1915,7 +1915,7 @@
     {
      "data": {
       "text/plain": [
-       "1710"
+       "5130"
       ]
      },
      "execution_count": 7,
@@ -19081,7 +19081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -19090,7 +19090,7 @@
        "torch.Size([8, 500])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19101,7 +19101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19113,7 +19113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19200,6 +19200,7 @@
     "        \n",
     "\n",
     "        for epoch in range(epochs):\n",
+    "            print(f\"Epoch {epoch}\")\n",
     "            #for i, (target, target_norm, orig, orig_norm, angle, sr) in enumerate(train_loader):\n",
     "            for i, (_, target, _, orig, angle, sr) in enumerate(train_loader):\n",
     "                optimizer.zero_grad()\n",
@@ -19256,6 +19257,8 @@
     "                    scheduler.step()\n",
     "                    if i % 10 == 0:\n",
     "                        print(f\"Epoch {epoch}, batch {i}, loss {loss.item()}\")\n",
+    "                    if i == 0:\n",
+    "                        print(f\"Epoch {epoch}, batch {i}, loss {loss.item()}\")\n",
     "                    \n",
     "\n",
     "\n",
@@ -19269,7 +19272,7 @@
     "                #optimizer.step()\n",
     "                #print(f\"Epoch {epoch}, batch {i}, loss {loss.item()}\")\n",
     "\n",
-    "            if epoch % 5 == 0 and epoch != 0:\n",
+    "            if epoch % 50 == 0 and epoch != 0:\n",
     "                torch.save(self.state_dict(), f\"model_{epoch}.pth\")\n",
     "                print(f\"Saved model_{epoch}.pth\")\n",
     "\n",
@@ -19278,7 +19281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -19293,52 +19296,52 @@
      "data": {
       "text/plain": [
        "AudioTransformer(\n",
-       "  (input_encoding): Linear(in_features=500, out_features=512, bias=True)\n",
-       "  (input_bn): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (input_encoding): Linear(in_features=500, out_features=500, bias=True)\n",
+       "  (input_bn): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "  (transformer): Transformer(\n",
        "    (encoder): TransformerEncoder(\n",
        "      (layers): ModuleList(\n",
        "        (0-2): 3 x TransformerEncoderLayer(\n",
        "          (self_attn): MultiheadAttention(\n",
-       "            (out_proj): NonDynamicallyQuantizableLinear(in_features=512, out_features=512, bias=True)\n",
+       "            (out_proj): NonDynamicallyQuantizableLinear(in_features=500, out_features=500, bias=True)\n",
        "          )\n",
-       "          (linear1): Linear(in_features=512, out_features=2048, bias=True)\n",
+       "          (linear1): Linear(in_features=500, out_features=2048, bias=True)\n",
        "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (linear2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "          (norm1): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       "          (norm2): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "          (linear2): Linear(in_features=2048, out_features=500, bias=True)\n",
+       "          (norm1): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
+       "          (norm2): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
        "          (dropout1): Dropout(p=0.1, inplace=False)\n",
        "          (dropout2): Dropout(p=0.1, inplace=False)\n",
        "        )\n",
        "      )\n",
-       "      (norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "      (norm): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
        "    )\n",
        "    (decoder): TransformerDecoder(\n",
        "      (layers): ModuleList(\n",
-       "        (0-255): 256 x TransformerDecoderLayer(\n",
+       "        (0-499): 500 x TransformerDecoderLayer(\n",
        "          (self_attn): MultiheadAttention(\n",
-       "            (out_proj): NonDynamicallyQuantizableLinear(in_features=512, out_features=512, bias=True)\n",
+       "            (out_proj): NonDynamicallyQuantizableLinear(in_features=500, out_features=500, bias=True)\n",
        "          )\n",
        "          (multihead_attn): MultiheadAttention(\n",
-       "            (out_proj): NonDynamicallyQuantizableLinear(in_features=512, out_features=512, bias=True)\n",
+       "            (out_proj): NonDynamicallyQuantizableLinear(in_features=500, out_features=500, bias=True)\n",
        "          )\n",
-       "          (linear1): Linear(in_features=512, out_features=2048, bias=True)\n",
+       "          (linear1): Linear(in_features=500, out_features=2048, bias=True)\n",
        "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (linear2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "          (norm1): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       "          (norm2): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       "          (norm3): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "          (linear2): Linear(in_features=2048, out_features=500, bias=True)\n",
+       "          (norm1): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
+       "          (norm2): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
+       "          (norm3): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
        "          (dropout1): Dropout(p=0.1, inplace=False)\n",
        "          (dropout2): Dropout(p=0.1, inplace=False)\n",
        "          (dropout3): Dropout(p=0.1, inplace=False)\n",
        "        )\n",
        "      )\n",
-       "      (norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "      (norm): LayerNorm((500,), eps=1e-05, elementwise_affine=True)\n",
        "    )\n",
        "  )\n",
-       "  (hidden_layer): Linear(in_features=512, out_features=512, bias=True)\n",
-       "  (output_bn): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (output_decoding): Linear(in_features=512, out_features=500, bias=True)\n",
+       "  (hidden_layer): Linear(in_features=500, out_features=500, bias=True)\n",
+       "  (output_bn): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_decoding): Linear(in_features=500, out_features=500, bias=True)\n",
        "  (comp_model): InterleaveStereoCompressionModel(\n",
        "    (model): HFEncodecCompressionModel(\n",
        "      (model): EncodecModel(\n",
@@ -19519,62 +19522,31 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myTransformer = AudioTransformer(comp_model=comp_model, d_model=512, nhead=4, num_layers=3, dim_feedforward=256).cuda()\n",
+    "myTransformer = AudioTransformer(comp_model=comp_model, d_model=500, nhead=4, num_layers=3, dim_feedforward=500).cuda()\n",
     "myTransformer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, batch 0, loss 1.1698256731033325\n",
-      "Epoch 0, batch 10, loss 0.9795149564743042\n",
-      "Epoch 0, batch 20, loss 0.9704352617263794\n",
-      "Epoch 0, batch 30, loss 0.9667963981628418\n",
-      "Epoch 0, batch 40, loss 0.9711136221885681\n",
-      "Epoch 0, batch 50, loss 0.9729476571083069\n",
-      "Epoch 0, batch 60, loss 0.9679380059242249\n",
-      "Epoch 0, batch 70, loss 0.9678342938423157\n",
-      "Epoch 0, batch 80, loss 0.9763895869255066\n",
-      "Epoch 0, batch 90, loss 0.9700713157653809\n",
-      "Epoch 0, batch 100, loss 0.969142496585846\n",
-      "Epoch 0, batch 110, loss 0.973084568977356\n",
-      "Epoch 0, batch 120, loss 0.9755448698997498\n",
-      "Epoch 0, batch 130, loss 0.9664592146873474\n",
-      "Epoch 0, batch 140, loss 0.972521960735321\n",
-      "Epoch 0, batch 150, loss 0.971355676651001\n",
-      "Epoch 0, batch 160, loss 0.9680570960044861\n",
-      "Epoch 0, batch 170, loss 0.9713075160980225\n",
-      "Epoch 0, batch 180, loss 0.9715850353240967\n",
-      "Epoch 0, batch 190, loss 0.9670991897583008\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyTransformer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maudio_codes_dataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.001\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[17], line 138\u001b[0m, in \u001b[0;36mAudioTransformer.train_loop\u001b[0;34m(self, dataset, batch_size, epochs, lr, cosine_loss)\u001b[0m\n\u001b[1;32m    136\u001b[0m         scheduler\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m    137\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 138\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, batch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, loss \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss\u001b[38;5;241m.\u001b[39mitem()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    142\u001b[0m     \u001b[38;5;66;03m#y = torch.ones_like(target_codes).cuda()\u001b[39;00m\n\u001b[1;32m    143\u001b[0m     \u001b[38;5;66;03m#y = torch.ones(target_codes.size(0)).cuda()\u001b[39;00m\n\u001b[1;32m    144\u001b[0m     \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[38;5;66;03m#optimizer.step()\u001b[39;00m\n\u001b[1;32m    150\u001b[0m     \u001b[38;5;66;03m#print(f\"Epoch {epoch}, batch {i}, loss {loss.item()}\")\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m epoch \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m5\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m epoch \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 0\n"
      ]
     }
    ],
    "source": [
-    "myTransformer.train_loop(dataset=audio_codes_dataset, batch_size=8, epochs=100, lr=0.001)"
+    "myTransformer.train_loop(dataset=audio_codes_dataset, batch_size=4, epochs=151, lr=0.001)"
    ]
   },
   {
@@ -19590,18 +19562,6 @@
    "display_name": "venv_work",
    "language": "python",
    "name": "venv_work"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.13"
   }
  },
  "nbformat": 4,
