Created Spectrogram util program

--- a/Time Domain/MusicGen/AudioBreakdown.ipynb
+++ b/Time Domain/MusicGen/AudioBreakdown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -108,18 +108,18 @@
       "recording_01.wav\n",
       "Sample rate is 44100 not 32000\n",
       "\twaveform shape: torch.Size([1, 547200000])\n",
-      "\tChunk length: 320000\n",
-      "\tNumber of chunks: 1710\n",
+      "\tChunk length: 32000\n",
+      "\tNumber of chunks: 17100\n",
       "90Deg_EARS_1.wav\n",
       "Sample rate is 44100 not 32000\n",
       "\twaveform shape: torch.Size([1, 547200000])\n",
-      "\tChunk length: 320000\n",
-      "\tNumber of chunks: 1710\n",
+      "\tChunk length: 32000\n",
+      "\tNumber of chunks: 17100\n",
       "90Deg_EARS_2.wav\n",
       "Sample rate is 44100 not 32000\n",
       "\twaveform shape: torch.Size([1, 547200000])\n",
-      "\tChunk length: 320000\n",
-      "\tNumber of chunks: 1710\n"
+      "\tChunk length: 32000\n",
+      "\tNumber of chunks: 17100\n"
      ]
     }
    ],
@@ -127,8 +127,8 @@
     "# origin -> where the 4 hour 45 min files are stored\n",
     "# output -> where to store the 30 second files\n",
     "origin = '/workspace/model2_data'\n",
-    "output = '/workspace/small_model_data3'\n",
-    "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output, file_lengths=10)\n",
+    "output = '/workspace/1sec_wav_files'\n",
+    "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output, file_lengths=1)\n",
     "myaudio.run()"
    ]
   },
@@ -142,9 +142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_work",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv_work"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
