--- a/Freqency Domain/AudioBreakdown.ipynb
+++ b/Freqency Domain/AudioBreakdown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,14 @@
     "                file_path1 = os.path.join(self.old_path, file_name)\n",
     "\n",
     "                # Get the other ear\n",
-    "                file_name2 = file_name.replace('EARS_1', 'EARS_2')\n",
+    "                file_name2 = file_name.replace('EARS_2', 'EARS_1')\n",
     "                file_path2 = os.path.join(self.old_path, file_name2)\n",
+    "                print(file_path1, file_path2)\n",
     "\n",
     "                # Load both audio files\n",
     "                waveform1, sample_rate1 = torchaudio.load(file_path1)\n",
     "                waveform2, sample_rate2 = torchaudio.load(file_path2)\n",
+    "                \n",
     "\n",
     "                # Combine the two waveforms\n",
     "                waveform = torch.cat((waveform1, waveform2), dim=0)\n",
@@ -96,6 +98,7 @@
     "                    torchaudio.save(new_file_path, chunk, sample_rate)\n",
     "\n",
     "            else: \n",
+    "                \n",
     "                # Deals with mono files\n",
     "                print(f\"{file_name}\")\n",
     "                \n",
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,24 +150,12 @@
      "text": [
       "recording_01.wav\n",
       "\twaveform shape: torch.Size([1, 754110000])\n",
-      "\tChunk length: 441000\n",
-      "\tNumber of chunks: 1710\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+      "\tChunk length: 44100\n",
+      "\tNumber of chunks: 17100\n",
+      "/workspace/model2_data/90Deg_EARS_2.wav /workspace/model2_data/90Deg_EARS_1.wav\n",
+      "\twaveform shape: torch.Size([2, 754110000])\n",
+      "\tChunk length: 44100\n",
+      "\tNumber of chunks: 17100\n"
      ]
     }
    ],
@@ -172,9 +163,38 @@
     "# origin -> where the 4 hour 45 min files are stored\n",
     "# output -> where to store the 30 second files\n",
     "origin = '/workspace/model2_data'\n",
-    "output = '/workspace/10sec_wav_files'\n",
-    "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output, file_lengths=10)\n",
+    "output = '/workspace/extension/1sec_wav_files'\n",
+    "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output, file_lengths=1)\n",
     "myaudio.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "waveform, sample_rate = torchaudio.load('/workspace/extension/10sec_wav_files/90Deg_EARS_2_8.wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 441000])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "waveform.shape"
    ]
   },
   {
