--- a/Freqency Domain/Autoencoder.ipynb
+++ b/Freqency Domain/Autoencoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +101,12 @@
     "                # We can use the difference to get both left and right channels\n",
     "                output_stft = inputs * outputs\n",
     "                # Compare this to the target stft\n",
-    "                \n",
     "\n",
-    "                # This is the stft, so we take the istft\n",
-    "                XD = torch.istft(x_d, n_fft=1024, hop_length=256, normalized=True, return_complex=False)\n",
+    "                # We compare the istft to the target\n",
+    "                # XD --> output stft\n",
+    "                # targets --> stft\n",
+    "                loss = criterion(output_stft, targets)\n",
     "\n",
-    "                # \n",
-    "                \n",
-    "                \n",
-    "\n",
-    "\n",
-    "                # Calculate the loss\n",
-    "                # We are comparing the stft\n",
-    "\n",
-    "                loss = criterion(outputs, targets)\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "\n",
@@ -125,6 +117,7 @@
     "                for i, (_, targets, _, inputs, angle, sr) in enumerate(val_loader):\n",
     "                    inputs, targets = inputs.cuda(), targets.cuda()\n",
     "                    outputs = self(inputs)\n",
+    "                    outputs = inputs * outputs\n",
     "                    val_loss += criterion(outputs, targets).item()\n",
     "                val_loss /= len(val_loader)  # Calculate average validation loss\n",
     "\n",
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +139,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "with open('/workspace/extension/train_dataset.pkl', 'wb') as f:\n",
+    "    pickle.dump(dataset, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +176,7 @@
        "17100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,6 +204,15 @@
     "print(dataset[1][0].shape)\n",
     "print(dataset[3][1].shape)\n",
     "print(dataset[5][2].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[1][0]"
    ]
   },
   {
@@ -267,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "autoencoder.train_loop(train_dataset, val_dataset, batch_size=32, epochs=100, lr=0.001)"
+    "autoencoder.train_loop(train_dataset, val_dataset, batch_size=32, epochs=100, lr=0.01)"
    ]
   },
   {
@@ -280,7 +310,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# NOTE THAT THE MODEL GENERATES STFTs not the actual audio\n",
+    "# MAKE SURE THIS IS THE SAME AS ConvertData.ipynb\n",
+    "sr = 44100  # Sample rate in Hz (change this to match your audio's sample rate)\n",
+    "window_length_ms = 25  # Window length in ms\n",
+    "hop_length_ms = 10  # Hop length in ms\n",
+    "\n",
+    "# Convert window length and hop length from ms to samples\n",
+    "window_length_samples = int(sr * window_length_ms / 1000)\n",
+    "hop_length_samples = int(sr * hop_length_ms / 1000)\n",
+    "\n",
+    "n_fft = window_length_samples\n",
+    "\n",
+    "# This is the stft, so we take the istft\n",
+    "# Use the same parameters as the stft\n",
+    "# return_complex since we want phase information\n",
+    "# Don't normalize since that is the amplitude information\n",
+    "XD = torch.istft(output_stft, n_fft=n_fft, hop_length=hop_length_samples, normalize=False, return_complex=True) # , normalized=True, return_complex=False"
+   ]
   }
  ],
  "metadata": {
@@ -288,6 +336,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
