Added all angles

--- a/Freqency Domain/old_files/ConvertData.ipynb
+++ b/Freqency Domain/old_files/ConvertData.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,23 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1102\n",
-      "441\n",
-      "1102\n"
+      "800\n",
+      "320\n",
+      "800\n"
      ]
     }
    ],
    "source": [
     "# Load all files from /workspace/small_model_data3\n",
-    "target_dir = '/workspace/extension/1sec_wav_files'\n",
-    "output_dir = '/workspace/extension/1sec_spectrogram_files'\n",
+    "target_dir = '/workspace/extension/unet/wavs/left'\n",
+    "#output_dir = '/workspace/extension/1sec_spectrogram_files'\n",
     "# Use os to get list of all files in directory\n",
     "import os\n",
     "\n",
@@ -61,7 +61,7 @@
     "    # hop_length_samples = n_fft // 2  # This is a common choice\n",
     "\n",
     "    # Convert window length and hop length from ms to samples\n",
-    "    sr = 44100  # Sample rate in Hz (change this to match your audio's sample rate)\n",
+    "    sr = 32000  # Sample rate in Hz (change this to match your audio's sample rate)\n",
     "    window_length_ms = 25  # Window length in ms\n",
     "    hop_length_ms = 10  # Hop length in ms\n",
     "\n",
@@ -91,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(552, 73)"
+       "(401, 501)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
