--- a/Time Domain/MusicGen/AudioBreakdown.ipynb
+++ b/Time Domain/MusicGen/AudioBreakdown.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torchaudio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# This file is used to breakup the 4hour 45min files into 30 second files.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 30 seconds is used by musicgen but you can change the length to whatever you want.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchaudio\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torchaudio'"
+     ]
+    }
+   ],
    "source": [
     "# This file is used to breakup the 4hour 45min files into 30 second files.\n",
     "# 30 seconds is used by musicgen but you can change the length to whatever you want.\n",
@@ -119,8 +131,8 @@
     "# output -> where to store the 30 second files\n",
     "#origin = '/workspace/model2_data'\n",
     "#output = '/workspace/1sec_wav_files'\n",
-    "origin = '../../../Data/Audiobreakdown_Input'\n",
-    "output = '../../../Data/SplitDataChunks/75Deg_EARS_2'\n",
+    "origin = '../../../Data/FullAudio_SplitChannels'\n",
+    "output = '../../../Data/SplitDataChunks/90Deg_EARS_1'\n",
     "file_len = 1\n",
     "myaudio = AudioBreakdown(old_data_path=origin, new_data_path=output, file_lengths=file_len)\n",
     "myaudio.run()\n",
@@ -158,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
