--- a/HRTF Models/main.ipynb
+++ b/HRTF Models/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
     "\n",
     "print(f'Sampling rate: {sampling_rate} Hz')\n",
     "\n",
-    "# aaasourcePositions = aaasofa.getVariableValue('SourcePosition')\n",
+    "aaasourcePositions = aaasofa.getVariableValue('SourcePosition')\n",
     "\n",
     "# print(\"\\n\")\n",
     "# print(\"Source Positions\")\n",
@@ -71,103 +71,85 @@
     {
      "data": {
       "text/plain": [
-       "masked_array(data=[  0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.,   5.,  10.,  15.,  20.,  25.,  30.,  35.,  40.,\n",
-       "                    45.,  50.,  55.,  60.,  65.,  70.,  75.,  80.,  85.,\n",
-       "                    90.,  95., 100., 105., 110., 115., 120., 125., 130.,\n",
-       "                   135., 140., 145., 150., 155., 160., 165., 170., 175.,\n",
-       "                   180., 185., 190., 195., 200., 205., 210., 215., 220.,\n",
-       "                   225., 230., 235., 240., 245., 250., 255., 260., 265.,\n",
-       "                   270., 275., 280., 285., 290., 295., 300., 305., 310.,\n",
-       "                   315., 320., 325., 330., 335., 340., 345., 350., 355.,\n",
-       "                     0.],\n",
+       "masked_array(data=[1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
+       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5],\n",
        "             mask=False,\n",
        "       fill_value=1e+20)"
       ]
@@ -178,7 +160,10 @@
     }
    ],
    "source": [
-    "aaasourcePositions[:, 0]"
+    "# 0 -> azimuth\n",
+    "# 1 -> elevation\n",
+    "# 2 -> distance\n",
+    "aaasourcePositions[:, 2]"
    ]
   },
   {
